--- a/public/js/components/webcamComponent.html
+++ b/public/js/components/webcamComponent.html
@@ -2,8 +2,8 @@
   <div class="stats">
     <span ng-if="$ctrl.webcam.length > 0">{{$ctrl.webcam.length}} webcam(s)</span>
   </div>
-
-  <iframe width="100%" name="lkr-timelapse-player-iframe" frameborder="0" allowfullscreen="true" src="https://api.lookr.com/embed/player/1178148742/day?autoresize=1&amp;referrer=http%3A%2F%2Flocalhost%3A3000%2F" style="border: none;" height="405"></iframe>
+  
+  <!-- <iframe width="100%" name="lkr-timelapse-player-iframe" frameborder="0" allowfullscreen="true" ng-src="https://api.lookr.com/embed/player/{{'$ctrl.webcam.id'}}/day?autoresize=1&amp;referrer=http%3A%2F%2Flocalhost%3A3000%2F" style="border: none;" height="405"></iframe> -->
   <!-- 
   {{$ctrl.webcams}} -->
 </div>
