--- a/public/js/components/webcamComponent.html
+++ b/public/js/components/webcamComponent.html
@@ -1,9 +1,20 @@
 <div class="webcams-container">
   <div class="stats">
-    <span ng-if="$ctrl.webcam.length > 0">{{$ctrl.webcam.length}} webcam(s)</span>
+    <span ng-if="$ctrl.webcams.length > 0">{{$ctrl.webcams.length}} webcam(s)</span>
   </div>
+  <!-- <a name="lkr-timelapse-player" data-id="1178148742" data-play="day" href="https://lookr.com/1178148742" target="_blank">Athis-Mons › North: Place du Général de Gaulle − L'Atelier d'Alex − Rue Valentin Conrart</a><script async type="text/javascript" src="https://api.lookr.com/embed/script/player.js"></script> -->
+  <div class="cams" ng-repeat="webcam in $ctrl.webcams">
+    <iframe width="50%" name="lkr-timelapse-player-iframe" frameborder="0" allowfullscreen="true" ng-src=`https://api.lookr.com/embed/player/{{$ctrl.webcam.id}}/day?autoresize=1&amp;referrer=http%3A%2F%2Flocalhost%3A3000%2F` style="border: none;" height="405"></iframe>    
+    <!-- <a name="lkr-timelapse-player"
+    data-id="{{webcam.id}}"
+    data-play="day"
+    href="https://lookr.com/{{webcam.id}}"
+    target="_blank">
+    Nom de la ville
+  </a> -->
+  <a name="lkr-timelapse-player" data-id="1178148742" data-play="day" href="https://lookr.com/1178148742" target="_blank">Athis-Mons › North: Place du Général de Gaulle − L'Atelier d'Alex − Rue Valentin Conrart</a><script async type="text/javascript" src="https://api.lookr.com/embed/script/player.js"></script>
   
-  <!-- <iframe width="100%" name="lkr-timelapse-player-iframe" frameborder="0" allowfullscreen="true" ng-src="https://api.lookr.com/embed/player/{{'$ctrl.webcam.id'}}/day?autoresize=1&amp;referrer=http%3A%2F%2Flocalhost%3A3000%2F" style="border: none;" height="405"></iframe> -->
+  </div>
   <!-- 
   {{$ctrl.webcams}} -->
 </div>
