--- a/public/js/components/webcamComponent.html
+++ b/public/js/components/webcamComponent.html
@@ -4,9 +4,9 @@
   </div>
 </div>
 <div ng-repeat="webcam in $ctrl.webcam">
-  <a name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
+  <!-- <a name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
     Nom de la ville
-  </a>
-
+  </a> -->
+  <iframe width="100%" name="lkr-timelapse-player-iframe" frameborder="0" allowfullscreen="true" ng-src="getIframeSrc{{(webcam.id.src)}}" style="border: none;" height="361.6875"></iframe>
 </div>
 <script async type="text/javascript" src="https://api.lookr.com/embed/script/player.js"></script>
