modif switch case

--- a/public/js/components/weather.html
+++ b/public/js/components/weather.html
@@ -1,6 +1,6 @@
 <div class="weather-container">
   <div class="weather">
-    <div class="alert alert-danger" ng-show="$ctrl.error">
+    <div class="alert alert-danger" ng-show="$ctrl.error.length >= 0">
       {{$ctrl.error}}
     </div>
 
