--- a/public/js/components/weather.html
+++ b/public/js/components/weather.html
@@ -1,10 +1,12 @@
+<h2>Live Weather in : <span ng-show="!city"><em>entrez une ville dans le champs de recherche</em></span> <span ng-bind="city"></span></h2>
+
 <div class="weather-container">
   <div class="weather">
     <div class="alert alert-danger" ng-show="$ctrl.error.length >= 0">
       {{$ctrl.error}}
     </div>
 
-    <div class="weather">
+    <div class="weather container">
 
       <div class="town">
         <div class="form-group">
@@ -25,13 +27,13 @@
       </div>
     </div>
 
-    <div class="webcams-container">
+    <div class="webcams-container row">
         <div class="stats">
           <span ng-if="$ctrl.webcams.length > 0">{{$ctrl.webcams.length}} webcam(s)</span>
         </div>
       
         <div class="cams" ng-repeat="webcam in $ctrl.webcams">
-          <a name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
+          <a class="col-lg-3" name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
             <img ng-src="{{webcam.image.current.preview}}" alt="webcam">
           </a>
           
