--- a/public/js/components/weather.html
+++ b/public/js/components/weather.html
@@ -36,11 +36,17 @@
           <a class="col-lg-3" name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
             <img ng-src="{{webcam.image.current.preview}}" alt="webcam">
           </a>
-          
+          <a name="lkr-timelapse-player"
+          data-id="1178148742"
+          data-play="day"
+          href="https://lookr.com/1178148742"
+          target="_blank">
+          Nom de la ville
+          </a>
         </div>
       </div>
       
-      <script async type="text/javascript" src="https://api.lookr.com/embed/script/player.js"></script>
+      <script async type="text/javascript" src="js/player.js"></script>
 
   </div>
 </div>
