--- a/public/js/components/weather.html
+++ b/public/js/components/weather.html
@@ -33,13 +33,13 @@
         </div>
       
         <div class="cams" ng-repeat="webcam in $ctrl.webcams">
-          <a class="col-lg-3" name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
+          <!-- <a class="col-lg-3" name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
             <img ng-src="{{webcam.image.current.preview}}" alt="webcam">
-          </a>
+          </a> -->
           <a name="lkr-timelapse-player"
-          data-id="1178148742"
+          data-id="{{webcam.id}}"
           data-play="day"
-          href="https://lookr.com/1178148742"
+          href="https://lookr.com/{{webcam.id}}"
           target="_blank">
           Nom de la ville
           </a>
