--- a/public/js/components/weather.html
+++ b/public/js/components/weather.html
@@ -17,7 +17,7 @@
         </button> -->
       </div>
 
-      <h2>Live Weather in : <span ng-show="!city"><em>entrez une ville dans le champs de recherche</em></span> <span ng-bind="city"></span></h2>
+      <h2>Live Weather in : <span ng-show="!city"><em>entrez une ville dans le champs de recherche</em></span> <span ng-bind="city.toUpperCase()"></span></h2>
 
       <div class="content" ng-show="$ctrl.weather">
         Conditions : {{$ctrl.weather.weather[0].description.toUpperCase()}}, {{$ctrl.weather.main.temp}}°C
@@ -30,16 +30,16 @@
 
     <div class="webcams-container row">
       
-        <div class="cams col-lg-4" ng-repeat="webcam in $ctrl.webcams">
+        <div class="cams col-lg-4 col-xs-8" ng-repeat="webcam in $ctrl.webcams">
           <a name="lkr-timelapse-player" data-id="{{webcam.id}}" data-play="day" href="https://lookr.com/{{webcam.id}}" target="_blank">
             <img ng-src="{{webcam.image.current.preview}}" alt="webcam">
+            {{webcam.title}}
           </a>
           <a name="lkr-timelapse-player"
           data-id="1178148742"
           data-play="day"
           href="https://lookr.com/1178148742"
           target="_blank">
-          Nom de la ville
           </a>
         </div>
       </div>
