--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,10 +7,6 @@
 
 }
 
-body {
-  width: 100%;
-  background-image: url(../imgs/geometricbg.jpg)
-}
 
 .footer-bottom {
   padding: 15px 0;
@@ -46,7 +42,14 @@ body {
 
 body {
   text-align: center;
-  color: wheat;
+  width: 100%;
+  background-image: url(../imgs/geometricbg.jpg);
+  color:#597A9B;
+  font-size: 2em;
+  font-weight: 800;
+  -webkit-text-stroke: 1px black;
+  color: #D8D4CE;
+
 }
 
 .red {
@@ -54,7 +57,7 @@ body {
 }
 
 .blue {
-}
+
   color: blue;
 }
 
@@ -107,19 +110,17 @@ input {
 .neige{
   width: auto;
   height: auto;
-  background-image: url(../imgs/neige.jpg)
+  background-image: url(../imgs/snow.jpg)
 }
 
 .fog{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/fog.jpg)
+  background-image: url(../imgs/fog.jpg);
 }
 
 .night{
   width: auto;
   height: auto;
-  background-image: url(../imgs/nigth.jpg)
+  background-image: url(../imgs/night.jpg)
 }
 
 .nightcloud{
@@ -130,25 +131,25 @@ input {
 .nightrain{
   width: auto;
   height: auto;
-  background-image: url(../imgs/nigth-rain.jpg)
+  background-image: url(../imgs/night-rain.jpg)
 }
 
 .nightstorm{
   width: auto;
   height: auto;
-  background-image: url(../imgs/nigth-storm.jpg)
+  background-image: url(../imgs/night-storm.jpg)
 }
 
 .nightsnow{
   width: auto;
   height: auto;
-  background-image: url(../imgs/nigth-snow.jpg)
+  background-image: url(../imgs/night-snow.jpg)
 }
 
 .nightfog{
   width: auto;
   height: auto;
-  background-image: url(../imgs/nigth-fog.jpg)
+  background-image: url(../imgs/night-fog.jpg)
 }
 
 @media screen and (max-width: 750px){
