--- a/public/css/index.css
+++ b/public/css/index.css
@@ -127,7 +127,7 @@ input {
 .night{
   width: auto;
   height: auto;
-  background-image: url(../imgs/nigth.jpg)
+  background-image: url(../imgs/night.jpg)
 }
 
 .nightcloud{
