--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,12 +1,13 @@
 @font-face {
   font-family: 'steelworsteelworksvintagedemo';
-  src: url('../fonts/steelworks_vintage_demo-webfont.woff2') format('woff2'),
-       url('../fonts/steelworks_vintage_demo-webfont.woff') format('woff');
+  src: url('../fonts/steelworks_vintage_demo-webfont.woff2') format('woff2'), url('../fonts/steelworks_vintage_demo-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-
 }
 
+h1 {
+  font-size: 3em;
+}
 
 .footer-bottom {
   padding: 15px 0;
@@ -14,23 +15,7 @@
   color: #777;
 }
 
-/* .navbarLive Weather Wild App
-￼
- .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
-}
-
-.navbar .navbar-collapse {
-  text-align: center;
-}
-
-.logo {
-  width: 30px;
-  height: 30px;
-} */
-.fontsteel{
+.fontsteel {
   font-family: 'steelworsteelworksvintagedemo'
 }
 
@@ -44,14 +29,111 @@ body {
   text-align: center;
   width: 100%;
   background-image: url(../imgs/geometricbg.jpg);
-  color:#597A9B;
+  color: #597A9B;
   font-size: 2em;
   font-weight: 800;
-  -webkit-text-stroke: 1px darkkhaki;
+  -webkit-text-stroke: 1px rgb(24, 173, 184);
 }
 
 a {
   text-decoration: none;
+}
+
+.logo {
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+input {
+  max-width: 40%;
+  margin-left: 29%;
+  text-align: center;
+}
+
+.glyphicon {
+  font-size: 2em;
+  margin-top: 0.2%;
+  margin-left: -24%;
+}
+
+.sunnybg {
+  width: 100%;
+  height: 100%;
+  background-image: url(../imgs/sunny.jpg);
+}
+
+.nuagesol {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/nuage-soleil.jpg)
+}
+
+.nuage {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/nuage.jpg)
+}
+
+.rain {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/rain.jpg)
+}
+
+.orageeclaire {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/orageeclaire.jpg)
+}
+
+.neige {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/snow.jpg)
+}
+
+.fog {
+  background-image: url(../imgs/fog.jpg);
+}
+
+.night {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/night.jpg)
+}
+
+.nightcloud {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/night-clouds.jpg)
+}
+
+.nightrain {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/night-rain.jpg)
+}
+
+.nightstorm {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/night-storm.jpg)
+}
+
+.nightsnow {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/night-snow.jpg)
+}
+
+.nightfog {
+  width: auto;
+  height: auto;
+  background-image: url(../imgs/night-fog.jpg)
+}
+
+.cams img {
+  border-radius: 25px;
 }
 
 .red {
@@ -66,102 +148,10 @@ a {
   color: greenyellow;
 }
 
-.logo {
-  margin-top: 2%;
-  margin-bottom: 2%;
-}
-
-input {
-  max-width: 90%;
-  margin-left: 5%;
-  text-align: center;
-}
-
-.glyphicon {
-  font-size: 2em;
-  margin-top: 0.5%;
-}
-
-.sunnybg{
-  width: 100%;
-  height: 100%;
-  background-image: url(../imgs/sunny.jpg);
-}
-
-.nuagesol{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/nuage-soleil.jpg)
-}
-
-.nuage{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/nuage.jpg)
-}
-
-.rain{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/rain.jpg)
-}
-
-.orageeclaire{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/orageeclaire.jpg)
-}
-
-.neige{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/snow.jpg)
-}
-
-.fog{
-  background-image: url(../imgs/fog.jpg);
-}
-
-.night{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/night.jpg)
-}
-
-.nightcloud{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/night-clouds.jpg)
-}
-.nightrain{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/night-rain.jpg)
-}
-
-.nightstorm{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/night-storm.jpg)
-}
-
-.nightsnow{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/night-snow.jpg)
-}
-
-.nightfog{
-  width: auto;
-  height: auto;
-  background-image: url(../imgs/night-fog.jpg)
-}
-
-@media screen and (max-width: 750px){
+@media screen and (max-width: 750px) {
   body {
     height: 100%;
   }
-
   .webcams-container {
     margin-top: 5%;
     margin-bottom: 10%;
@@ -169,9 +159,9 @@ input {
   .cams {
     margin-bottom: 2%;
   }
-
   .cams img {
     max-width: 135%;
     margin-left: 12.5%;
+    border-radius: 15%;
   }
 }
