--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,10 @@
   font-style: normal;
 }
 
+body {
+  color: rgb(145, 145, 145)
+}
+
 h1 {
   font-size: 3em;
 }
@@ -12,7 +16,7 @@ h1 {
 .footer-bottom {
   padding: 15px 0;
   font-size: 11px;
-  color: #777;
+  color: rgb(110, 92, 92);
 }
 
 .fontsteel {
@@ -171,5 +175,13 @@ input {
     max-width: 135%;
     margin-left: 12.5%;
     border-radius: 15%;
+  }
+
+  .cams h4 {
+    margin-left: 55%;
+  }
+
+  .form-group a {
+    margin-left: 5%;
   }
 }
